--- a/packages/imt.sol/package.json
+++ b/packages/imt.sol/package.json
@@ -3,53 +3,39 @@
     "private": true,
     "scripts": {
         "start": "hardhat node",
-        "build": "hardhat compile",
         "compile": "hardhat compile",
         "test": "hardhat test",
         "test:report-gas": "REPORT_GAS=true hardhat test",
         "test:coverage": "hardhat coverage",
+        "typechain": "hardhat typechain",
         "lint": "solhint 'contracts/**/*.sol'"
     },
     "devDependencies": {
-        "@ethersproject/providers": "^5.4.7",
-        "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+        "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+        "@nomicfoundation/hardhat-ethers": "^3.0.0",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-        "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-        "@nomiclabs/hardhat-ethers": "^2.0.0",
-        "@nomiclabs/hardhat-etherscan": "^3.0.0",
-        "@typechain/ethers-v5": "^10.1.0",
-        "@typechain/hardhat": "^6.1.2",
+        "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+        "@nomicfoundation/hardhat-verify": "^2.0.0",
+        "@typechain/ethers-v6": "^0.5.0",
+        "@typechain/hardhat": "^9.0.0",
         "@types/chai": "^4.2.0",
-        "@types/mocha": ">=9.1.0",
+        "@types/mocha": "^10.0.6",
+        "@types/node": "^20.10.7",
         "@zk-kit/imt": "workspace:packages/imt",
-        "dotenv": "^14.3.2",
-        "ethers": "^5.4.7",
-        "hardhat": "^2.13.0",
+        "chai": "^4.2.0",
+        "ethers": "^6.4.0",
+        "hardhat": "^2.19.4",
         "hardhat-gas-reporter": "^1.0.8",
+        "poseidon-lite": "^0.2.0",
         "prettier-plugin-solidity": "^1.3.1",
-        "solhint": "^4.1.1",
-        "solhint-plugin-prettier": "^0.1.0",
-        "solidity-coverage": "^0.8.1",
-        "typechain": "^8.1.0"
+        "solhint": "^3.3.6",
+        "solhint-plugin-prettier": "^0.0.5",
+        "solidity-coverage": "^0.8.0",
+        "ts-node": "^10.9.2",
+        "typechain": "^8.3.0",
+        "typescript": "^5.3.3"
     },
     "dependencies": {
         "poseidon-solidity": "0.0.5"
-    },
-    "config": {
-        "solidity": {
-            "version": "0.8.4",
-            "settings": {
-                "optimizer": {
-                    "enabled": true,
-                    "runs": 200
-                }
-            }
-        },
-        "paths": {
-            "contracts": "./contracts",
-            "tests": "./test",
-            "cache": "./cache",
-            "build": "./build"
-        }
     }
 }
