--- a/packages/imt.sol/tsconfig.json
+++ b/packages/imt.sol/tsconfig.json
@@ -1,5 +1,13 @@
 {
-    "extends": "../../tsconfig.json",
-    "include": ["tasks/**/*", "test/**/*"],
+    "compilerOptions": {
+        "target": "es2020",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "resolveJsonModule": true
+    },
+    "include": ["scripts/**/*", "tasks/**/*", "test/**/*", "typechain-types/**/*"],
     "files": ["hardhat.config.ts"]
 }
