--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -73,5 +73,8 @@
         "rollup": "^4.12.0",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-polyfill-node": "^0.13.0"
+    },
+    "dependencies": {
+        "buffer": "^6.0.3"
     }
 }
