--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,11 @@ jobs:
                   cache: yarn
                   registry-url: "https://registry.npmjs.org"
 
+            - name: Authentication
+              run: echo npmAuthToken: "$NODE_AUTH_TOKEN" >> ./.yarnrc.yml
+              env:
+                NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
             - name: Install dependencies
               run: yarn
 
