--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,13 +7,17 @@
     "iife": "dist/index.iife.js",
     "unpkg": "dist/index.iife.min.js",
     "jsdelivr": "dist/index.iife.min.js",
-    "main": "dist/index.js",
+    "main": "dist/index.node.js",
     "types": "dist/types/index.d.ts",
     "exports": {
         ".": {
             "types": "./dist/types/index.d.ts",
-            "require": "./dist/index.cjs",
-            "default": "./dist/index.js"
+            "node": {
+                "require": "./dist/index.node.cjs",
+                "default": "./dist/index.node.js"
+            },
+            "browser": "./dist/index.browser.js",
+            "default": "./dist/index.node.js"
         },
         "./error-handlers": {
             "types": "./dist/types/error-handlers.d.ts",
@@ -44,6 +48,16 @@
             "types": "./dist/types/f1-field.d.ts",
             "require": "./dist/lib.commonjs/f1-field.cjs",
             "default": "./dist/lib.esm/f1-field.js"
+        },
+        "./crypto.browser": {
+            "types": "./dist/types/crypto.browser.d.ts",
+            "require": "./dist/lib.commonjs/crypto.browser.cjs",
+            "default": "./dist/lib.esm/crypto.browser.js"
+        },
+        "./crypto.node": {
+            "types": "./dist/types/crypto.node.d.ts",
+            "require": "./dist/lib.commonjs/crypto.node.cjs",
+            "default": "./dist/lib.esm/crypto.node.js"
         }
     },
     "files": [
@@ -58,21 +72,23 @@
         "url": "https://github.com/privacy-scaling-explorations/zk-kit.git/issues"
     },
     "scripts": {
-        "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript && yarn build:iife",
-        "build:iife": "rollup -c rollup.iife.config.ts --configPlugin typescript",
+        "build": "rimraf dist && yarn build:browser && yarn build:node",
+        "build:browser": "rollup -c rollup.browser.config.ts --configPlugin typescript",
+        "build:node": "rollup -c rollup.node.config.ts --configPlugin typescript",
         "prepublishOnly": "yarn build"
     },
     "publishConfig": {
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-alias": "^5.1.0",
+        "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.6",
         "@types/snarkjs": "^0",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
-        "rollup-plugin-cleanup": "^3.2.1",
-        "rollup-plugin-polyfill-node": "^0.13.0"
+        "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
         "buffer": "^6.0.3"
