--- a/packages/eddsa-proof/package.json
+++ b/packages/eddsa-proof/package.json
@@ -53,7 +53,8 @@
         "@ethersproject/bignumber": "^5.7.0",
         "@ethersproject/bytes": "^5.7.0",
         "@ethersproject/keccak256": "^5.7.0",
-        "@zk-kit/eddsa-poseidon": "0.5.1",
+        "@zk-kit/eddsa-poseidon": "0.9.0",
+        "@zk-kit/utils": "0.8.0",
         "snarkjs": "^0.7.3"
     }
 }
