--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/circuits",
-    "version": "0.4.0",
+    "version": "1.0.0-beta",
     "description": "A comprehensive library of general-purpose zero-knowledge circuits.",
     "license": "MIT",
     "files": [
