--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
         "version:bump": "yarn workspace @zk-kit/${0} version ${1} && yarn remove:stable-version-field ${0} && NO_HOOK=1 git commit -am \"chore(${0}): v${1}\" && git tag ${0}-v${1}",
         "version:publish": "yarn workspaces foreach -A --no-private npm publish --tolerate-republish --access public",
         "version:release": "changelogithub",
-        "lint": "eslint . --ext .js,.ts && yarn workspace imt.sol lint",
-        "prettier": "prettier -c .",
-        "prettier:write": "prettier -w .",
+        "lint:eslint": "eslint . --ext .js,.ts",
+        "lint": "turbo lint:eslint lint",
+        "format:prettier": "prettier -c .",
+        "format:prettier:write": "prettier -w .",
+        "format": "turbo format:prettier",
+        "format:write": "turbo format:prettier:write",
         "benchmarks": "rimraf benchmarks/results && ts-node benchmarks/index.ts",
         "docs": "typedoc --cname zkkit.pse.dev --githubPages true",
         "remove:stable-version-field": "ts-node scripts/remove-stable-version-field.ts ${0} && yarn prettier:write",
@@ -67,6 +70,7 @@
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "tslib": "^2.6.2",
+        "turbo": "^1.13.2",
         "typedoc": "^0.25.8",
         "typescript": "^5.3.3"
     },
